--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxthub/core": "^0.8.4",
     "nuxt": "^3.13.2",
     "vue": "latest",
     "vue-router": "latest"
